--- a/app/views/admin/books/edit.html.erb
+++ b/app/views/admin/books/edit.html.erb
@@ -1,5 +1,5 @@
-<%= render partial: "form", locals: {button_name: "Edytuj książkę"} %>
+<%= render partial: "form", locals: {button_name: "Edit book"} %>
 
-<div class="text-right">
-<%= link_to "Powrót", admin_books_path, class:"btn btn-primary" %>
-</div>
+<footer class="text-right">
+<%= link_to "Back", admin_books_path, class:"btn btn-primary" %>
+</footer>
