--- a/app/views/admin/books/_form.html.erb
+++ b/app/views/admin/books/_form.html.erb
@@ -1,9 +1,9 @@
 <%= simple_form_for [:admin,@book] do |f| %>
-  <%= f.input :author, label: "Autor" %>
-  <%= f.input :title, label: "Tytuł" %>
-  <%= f.input :description, label: "Opis" %>
-  <%= f.input :year, label: "Rok wydania" %>
-  <%= f.input :count, label: "Liczba sztuk" %>
-  <%= f.input :publisher, label: "Wydawnictwo" %>
+  <%= f.input :author %>
+  <%= f.input :title %>
+  <%= f.input :description %>
+  <%= f.input :year, label: "Year of edition" %>
+  <%= f.input :count, label: "Copies count" %>
+  <%= f.input :publisher %>
   <%= f.button :submit, button_name, class: "btn btn-success" %>
 <% end %>
