--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,1 @@
-<table class="table">
-  <thead>
-    <th>Autor</th>
-    <th>Tytuł</th>
-    <th>Dostępna ilość</td>
-    <th>Wypożyczono</th>
-    <th>Do wypożyczenia zostało</th>
-  </thead>
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.author %></td>
-        <td><%= book.title %></td>
-        <td><%= book.count %></td>
-        <td><%= book.borrowed_count %></td>
-        <td><%= book.count - book.borrowed_count %></td>
-        <td><%= link_to "Zobacz szczegóły", book_path(book) %></td>
-        <% if book.count - book.borrowed_count > 0 && current_user %>
-          <td><%= link_to "Wypożycz", orderbook_path(book) %></td>
-        <% elsif book.count - book.borrowed_count > 0 && !current_user %>
-          <td><%= link_to "Zaloguj się, żeby wypożyczyć", "/auth/google_oauth2", id: "sign_in" %></td>
-        <% else %>
-          <td>Wszystkie książki wypożyczone.</td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= paginate @books %>
+<%= render partial: 'booklist', locals: { b: @books } %>
